# despro-mbg

./: .dockerignore  .env  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  TO-DO.md  app.json  babel.config.js  cesconfig.jsonc  compose.debug.yaml  compose.yaml  docker-compose.yml  eslint_report.json  google-services.json  lint_errors.txt  lint_errors_2.txt  lint_output.txt  lint_remaining.txt  lint_signup_errors.txt  main.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tree.txt  tsc_check_2.txt  tsc_output.txt  tsconfig.json
.github/: copilot-instructions.md
app/: _layout.jsx  _layout.tsx  admin-emergency-report.jsx  admin-feedback.jsx  feedback.jsx  index.jsx  index.tsx  portal-feedback.jsx  portal-masukan.jsx  report.jsx  school-dashboard.jsx  school-emergency-report.jsx
components/: Sidebar.jsx  ThemedView.jsx
constants/: Colors.ts  index.ts  roles.ts
context/: AuthContext.tsx  OfflineContext.tsx  PreferencesContext.tsx  SidebarContext.tsx  SnackbarContext.tsx
hooks/: useElectronNfc.ts  useNetworkMode.ts  useOffline.ts  useOfflineMutation.ts  usePushNotifications.ts  useResponsive.ts  useSnackbar.ts
lib/: nfc.ts  react-query.ts  react-query.tsx  utils.ts
schemas/: cdn.ts  menuQc.ts  users.ts
services/: analytics.ts  api-keys.ts  api.ts  associations.ts  attendance.ts  auth.ts  caterings.ts  cdnService.ts  database.ts  emergency.ts  feedback.ts  foodHistory.ts  health.ts  healthAreas.ts  healthOfficeAreas.ts  notifications.ts  offlineQueue.ts  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+126 files in other folders)
